--- a/src/components/Admin Dashboard/wrapper.css
+++ b/src/components/Admin Dashboard/wrapper.css
@@ -1,11 +1,11 @@
-li {
+body:has(.wrapper) li {
   display: flex;
   align-items: center;
   gap: 10px;
   color: white;
   margin: 15px 0;
 }
-section > div {
+body:has(.wrapper) section > div {
   width: 100%;
   height: 180px;
   margin: 10px 0;
