--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'product-sans';
+  src: url('./assets/Product Sans Regular.ttf');
+}
+body:has(.eventhive) {
+  background-color: #f8f8fa;
+  font-family: 'product-sans';
+}
+body:has(.eventhive) :is(h1, h2, h3) {
+  font-weight: 700;
+}
+body:has(.eventhive) h1 {
+  font-size: 3rem;
+  line-height: 1.2 !important;
+}
+body:has(.eventhive) h2 {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+body:has(.eventhive) h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+body:has(.white-bg) {
+  background: #fff;
+}
+/* preloader */
+.typing-text {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 3.5s infinite;
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 15rem;
+  }
+}
