--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "../node_modules/@syncfusion/ej2-base/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-buttons/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-calendars/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-dropdowns/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-inputs/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-navigations/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-popups/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-notifications/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
-
 @font-face {
   font-family: "product-sans";
   src: url("./assets/Product Sans Regular.ttf");
@@ -48,6 +37,7 @@ body:has(.white-bg) {
   overflow: hidden;
   white-space: nowrap;
   animation: typing 3.5s infinite;
+  -webkit-animation: typing 20s infinite;
 }
 @keyframes typing {
   from {
